Addeded of resources subpage

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href="https://leandrofidelruano.vercel.app">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/default.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/go.min.js"></script>
     <script>hljs.highlightAll();</script>
-    <title>Portfolio - Leandro Ruano</title>
+    <title>Portfolio - Leandro Fidel Ruano</title>
 </head>
 <body>
     <header class="header">
@@ -17,7 +18,7 @@
             <a href="#about-me">Sobre mí</a>
             <a href="#proyects">Proyectos</a>
             <a href="#experience">Experiencia</a>
-            <a href="#blog">Blog</a>
+            <a href="resources.html">Recursos</a>
         </nav>
         <button>Contacto</button>
     </header>
@@ -61,11 +62,6 @@
             <article>
                 <h2>Experiencia</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem dolorum earum nulla, similique sit quam, magnidelectus quis amet praesentium consectetur nemo, quas rerum! Obcaecati nesciunt tempore eum magnam mollitia aliquam, minusmolestias. Architecto voluptas, iure ad consectetur dolorum rerum error vitae minus autem cum hic aliquid cumque numquamrepellendus dicta ullam unde fugiat harum alias temporibus vero impedit animi nostrum. Tenetur, vel? Vel doloribus eumaliquid autem minima enim recusandae, iure nostrum voluptate laboriosam ipsum eligendi debitis magnam placeat aliasmolestiae eius voluptatum eos reprehenderit officiis voluptates? Quasi quo doloremque nam ratione itaque tenetur dolorquis culpa beatae recusandae.</p>
-            </article>
-        </section>
-        <section id="blog">
-            <article>
-                <h2>Blog</h2>
                 <h3>Paleta de colores para la academia:</h3>
                 <div class="boxes">
                     <div class="color-1">#e8d8c7</div>
@@ -82,7 +78,7 @@
                 <pre><code class="language-html">si usamos un <p> por ejemplo</p> xdd</code></pre>
                 <pre><code class="">// Using require
                 const hljs = require('highlight.js');
-
+        
                 // Using ES6 import syntax
                 import hljs from 'highlight.js';
                 </code></pre>
